--- a/index.html
+++ b/index.html
@@ -278,16 +278,16 @@
             <li><h4>À propos</h4></li>
             <li><a href="#">Fonctionnement du site</a></li>
             <li><a href="#">Conditions générales</a></li>
-            <li><a href="#">donées et confirdentialité</a></li>
+            <li><a href="#">Données et confidentialité</a></li>
         </ul>
         <ul>
             <li><h4>Nos hébergements</h4></li>
             <li><a href="#">Charte qualité</a></li>
-            <li><a href="#">proposer votre hôtel</a></li>
+            <li><a href="#">Proposer votre hôtel</a></li>
         </ul>
         <ul>
             <li><h4>Assistance</h4></li>
-            <li><a href="#"> Centre d'aider</a></li>
+            <li><a href="#"> Centre d'aide</a></li>
             <li><a href="#">Nous contacter</a></li>
         </ul>
     </div>
