modification HTML/CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Booki</title>
 </head>
 <body>
@@ -28,17 +28,15 @@
 
    <!-- section recherche-->
 
-        <section class="premieresection" id="HebergementsàMarseille">
+        <section class="premieresection" >
              <div class="hebergement">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
              </div>
                
-             <form method="post" action="#">
-              
-                    <i class="fa-solid fa-location-dot"></i>
-                    <label for="ville"> </label>
-                    <input type="text" name="ville" id="ville" placeholder="Marseille, France"/>                
+             <form method="post" action="#">               
+                     <i class="fa-solid fa-location-dot"></i>
+                     <input type="text"  placeholder="Marseille, France">                
                     <button><span>Rechercher</span>                                
                     <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
@@ -65,7 +63,7 @@
 
     <!--section hébergement-->
 
-        <section class="deuxiemesection">
+        <section class="deuxiemesection" id="HebergementsàMarseille">
             <!--Hebergement à Marseille-->
             <div class="cartesregroupement">
                          <h2>Hébergements à Marseille</h2>
