--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <header class="navigation">
         <nav class="navbar">
             <ul class="logo">
-                <li><a href="index.html"><img src="src/logo/Booki.png" alt="Logo" class="logobooki"></a></li>
+                <li><a href="index.html"><img src="images/logo/Booki.png" alt="Logo" class="logobooki"></a></li>
             </ul>
             <ul class="menu">
                 <li class="link_1"><a href="#HebergementsàMarseille">Hébergements</a></li>
@@ -70,7 +70,7 @@
                 <div class="cartes">
                     <div class="carte">
                         <a href="#">
-                        <img src="src/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge de la Canebière">
+                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge de la Canebière">
                         <h4>Auberge La Canebière</h4>
                         <p>Nuit à partir de 25<b>€</b></p>
                         <P>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="carte">
                         <a href="#">
-                        <img src="src/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                        <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
                         <h4>Hôtel du port</h4>
                         <p>Nuit à partir de 52<b>€</b></p>
                         <P>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="carte">
                         <a href="#">
-                        <img src="src/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
+                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
                         <h4>Hôtel Les mouettes</h4>
                         <p>Nuit à partir de 76<b>€</b></p>
                         <P>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="carte">
                         <a href="#">
-                        <img src="src/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                        <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
                         <h4>Hôtel de la mer</h4>
                         <p>Nuit à partir de 46<b>€</b></p>
                         <P>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="carte">
                         <a href="#">
-                        <img src="src/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
                         <h4>Auberge Le Panier</h4>
                         <p>Nuit à partir de 23<b>€</b></p>
                         <P>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="carte">
                         <a href="#">
-                        <img src="src/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
                         <h4>Hôtel chez Amina</h4>
                         <p>Nuit à partir de 96<b>€</b></p>
                         <P>
@@ -170,7 +170,7 @@
                 <div class="populaires">
                     <div class="cartehotel">
                         <a href="#">
-                        <img src="src/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
                         </a>
                         <div class="description"> 
                          <a href="#">                       
@@ -191,7 +191,7 @@
                     </div>
                     <div class="cartehotel">
                         <a href="#">
-                        <img src="src/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes AU coeur de l'eau">
+                        <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes AU coeur de l'eau">
                         </a>
                         <div class="description">
                         <a href="#">
@@ -211,7 +211,7 @@
                     </div>
                     <div class="cartehotel">
                         <a href="#">
-                        <img src="src/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
+                        <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
                         </a>
                         <div class="description">
                          <a href="#">   
@@ -240,25 +240,25 @@
                 <div class="card_activites">
                     <div class="card">
                         <a href="#">
-                        <img src="src/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
+                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
                         <h4>Vieux-Port</h4> 
                         </a>                       
                     </div>
                     <div class="card">
                         <a href="#">
-                        <img src="src/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                         <h4>Fort de Pomègues</h4>
                         </a>
                     </div>
                     <div class="card">
                         <a href="#">
-                        <img src="src/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calangues">
+                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calangues">
                         <h4>Parc national des Calangues</h4>
                         </a>
                     </div>
                     <div class="card">
                         <a href="#">
-                        <img src="src/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                         <h4>Notre-Dame-de-la-Garde</h4>   
                         </a>
                     </div>
